prevent jump

--- a/webapp/finder/find/theme/styles/pages/results.css
+++ b/webapp/finder/find/theme/styles/pages/results.css
@@ -4397,3 +4397,30 @@ p.sync-status span {
 .chat-delete:hover {
 	color: #333;
 }
+.brickvertical.uninitialized {
+	display: grid;
+	grid-gap: 10px;
+	padding: 10px 10px 10px 5px;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+.brickvertical.uninitialized .masonry-grid-cell {
+	position: relative;
+	height: 300px;
+	overflow: hidden;
+}
+.brickvertical.uninitialized .emcategory-inner {
+	display: flex;
+	flex-direction: column;
+	height: 300px;
+}
+.brickvertical.uninitialized .emcategory-thumb {
+	flex: 1;
+	height: auto !important;
+}
+.brickvertical.uninitialized .emcategory-thumb .emthumbholder {
+	height: 100%;
+}
+.brickvertical.uninitialized img.imagethumb {
+	height: 100%;
+	object-fit: cover;
+}
